--- a/chart/charts/k3s-traefik/values.yaml
+++ b/chart/charts/k3s-traefik/values.yaml
@@ -115,8 +115,8 @@ traefik:
 
   volumes: 
     # Make sure to reflect the certificate in the crowdsec configuration
-    - name: "{{ .Release.Name }}-bouncer"
-      mountPath: /etc/traefik/certs/crowdsec-bouncer-tls
+    - name: "crowdsec-bouncer-tls"
+      mountPath: /etc/traefik/crowdsec-certs/
       type: secret
 
   # experimental: 
