--- a/chart/charts/k3s-crowdsec/values.yaml
+++ b/chart/charts/k3s-crowdsec/values.yaml
@@ -24,6 +24,7 @@ crowdsec:
   tls:
     enabled: true
     bouncer:
+      secret: "{{ .Release.Name }}-bouncer-tls"
       reflector:
         namespaces: ["traefik"]
 
