--- a/chart/charts/k3s-traefik/values.yaml
+++ b/chart/charts/k3s-traefik/values.yaml
@@ -115,7 +115,7 @@ traefik:
 
   volumes: 
     # Make sure to reflect the certificate in the crowdsec configuration
-    - name: "crowdsec-bouncer-tls"
+    - name: "{{ .Release.Name }}-bouncer-tls"
       mountPath: /etc/traefik/crowdsec-certs/
       type: secret
 
