--- a/chart/charts/k3s-crowdsec/values.yaml
+++ b/chart/charts/k3s-crowdsec/values.yaml
@@ -24,9 +24,9 @@ crowdsec:
   tls:
     enabled: true
     bouncer:
-      secret: "crowdsec-bouncer-tls"
-      reflector:
-        namespaces: ["traefik"]
+      secret: "{{ .Release.Name }}-bouncer-tls"
+      # reflector:
+      #   namespaces: ["traefik"]
 
   config:
     # -- To better understand stages in parsers, you can take a look at https://docs.crowdsec.net/docs/next/parsers/intro/
