--- a/chart/charts/k3s-crowdsec/values.yaml
+++ b/chart/charts/k3s-crowdsec/values.yaml
@@ -147,7 +147,7 @@ crowdsec:
 
     dashboard:
       # -- Enable Metabase Dashboard (by default disabled)
-      enabled: false
+      enabled: true
       # -- environment variables from metabase/metabase docker image
       # -- see https://www.metabase.com/docs/latest/configuring-metabase/environment-variables
       env: []
