--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -141,6 +141,9 @@ k3s-traefik:
 
     # The URL to access the dashboard
     ingressUrl: "traefik.example.com"
+    middlewares: 
+      - name: traefik-default-chain
+        namespace: traefik
 
     # The secret name for the TLS certificate used by the dashboard ingress
     entrypoint: websecure
