--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -179,6 +179,13 @@ k3s-traefik:
       enabled: true
       inDefaultChain: true
 
+    # Authentik forwardauth middleware
+    authentikForwardAuth:
+      # Enable the Authentik forwardauth middleware
+      enabled: true
+      inDefaultChain: false
+      url: https://example.com/outpost.goauthentik.io/auth/traefik
+
     # Enable the CrowdSec bouncer middleware
     crowdsecBouncer:
       enabled: true
